--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,14 @@
     <p>
       The SECRET NUMBER is <%= number %>
     </p>
+    <p>  
+      <%= message %> 
+    </p>
   </body>
 </html>
+<form>
+  <input type='text' name='guess' />
+  <input type='submit' value='Guess!' />
+</form>
+
 
